--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@
 APP_ENV=dev
 APP_SECRET=f753c40efa3afb3af7b44645a1400b9a
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-#TRUSTED_HOSTS='^(localhost|example\.com)$'
+#TRUSTED_HOSTS='^www.docroute.loc'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,3 +27,7 @@ APP_SECRET=f753c40efa3afb3af7b44645a1400b9a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:""@127.0.0.1:3306/DocRoute?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://.*?$
+###< nelmio/cors-bundle ###
