--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "jms/serializer-bundle": "^3.5",
+        "nelmio/cors-bundle": "^2.0",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
